@@ -58,7 +58,7 @@ import net.sourceforge.cruisecontrol.util.ValidationHelper;
  * Monitors a set of one or more CM Synergy sessions, launching new sessions as needed. The session information is
  * persisted and made available to other CM Synergy plugins through the session file - a simple properties file which
  * maps a session name to a CM Synergy session ID.
- * 
+ *
  * @author <a href="mailto:rjmpsmith@gmail.com">Robert J. Smith </a>
  */
 public class CMSynergySessionMonitor implements Listener {
@@ -73,7 +73,7 @@ public class CMSynergySessionMonitor implements Listener {
 
     /**
      * Sets the name of the CM Synergy executable to use when issuing commands.
-     * 
+     *
      * @param ccmExe
      *            the name of the CM Synergy executable
      */
@@ -89,7 +89,7 @@ public class CMSynergySessionMonitor implements Listener {
      * example: <br>
      * <br>
      * session1=localhost:65024:192.168.1.17
-     * 
+     *
      * @param sessionFile
      *            The session file
      */
@@ -99,7 +99,7 @@ public class CMSynergySessionMonitor implements Listener {
 
     /**
      * Creates a new <code>CMSynergySession</code> object and adds it to our list of monitored sessions.
-     * 
+     *
      * @return The newly created <code>CMSynergySession</code> object.
      */
     public CMSynergySession createSession() {
@@ -110,7 +110,7 @@ public class CMSynergySessionMonitor implements Listener {
 
     /**
      * A simple representation of a CM Synergy commandline session
-     * 
+     *
      * @author <a href="mailto:rjmpsmith@hotmail.com">Robert J. Smith</a>
      */
     public class CMSynergySession implements Serializable {
@@ -123,10 +123,11 @@ public class CMSynergySessionMonitor implements Listener {
         private String user;
         private String password;
         private String host;
+        private boolean remoteclient;
 
         /**
          * Gets the given name of the session.
-         * 
+         *
          * @return The name.
          */
         public String getName() {
@@ -135,7 +136,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the name of the session as it will be referenced in the Cruise Control config file
-         * 
+         *
          * @param name
          *            The session's given name.
          */
@@ -145,7 +146,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Gets the password used to start the session.
-         * 
+         *
          * @return The password.
          */
         public String getPassword() {
@@ -154,7 +155,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the password which will be used to start the session.
-         * 
+         *
          * @param password
          *            The password.
          */
@@ -164,7 +165,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Gets the CM Synergy role under which the session was started.
-         * 
+         *
          * @return The role.
          */
         public String getRole() {
@@ -173,7 +174,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the CM Synergy role under which the session will be started.
-         * 
+         *
          * @param role
          *            The role.
          */
@@ -183,7 +184,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Gets the user ID under which the session was started.
-         * 
+         *
          * @return The user ID.
          */
         public String getUser() {
@@ -192,7 +193,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the user ID under which the session will be started.
-         * 
+         *
          * @param user
          *            The user ID.
          */
@@ -202,7 +203,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Gets the CM Synergy database with which the session is associated
-         * 
+         *
          * @return The database.
          */
         public String getDatabase() {
@@ -211,7 +212,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the CM Synergy database with which the session will be associated
-         * 
+         *
          * @param db
          *            The database.
          */
@@ -221,7 +222,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Gets the host upon which the session is running.
-         * 
+         *
          * @return The host.
          */
         public String getHost() {
@@ -230,7 +231,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Sets the host upon which the session will run.
-         * 
+         *
          * @param host
          *            The host.
          */
@@ -239,8 +240,27 @@ public class CMSynergySessionMonitor implements Listener {
         }
 
         /**
+         * Gets whether to connect in remote-client mode
+         *
+         * @return Remote client true/false
+         */
+        boolean isRemoteClient() {
+            return remoteclient;
+        }
+
+        /**
+         * Sets remote client mode true/false
+         *
+         * @param remoteclient
+         *           true/false string for remote-client mode
+         */
+        public void setRemoteClient(String remoteclient) {
+            this.remoteclient = Boolean.parseBoolean(remoteclient);
+        }
+
+        /**
          * Sets the attribute (properties) file from which the session information will be loaded.
-         * 
+         *
          * @param attributeFile
          *            The file from which to read our session attributes.
          */
@@ -252,6 +272,7 @@ public class CMSynergySessionMonitor implements Listener {
                 user = properties.getProperty("user");
                 password = properties.getProperty("password");
                 host = properties.getProperty("host");
+                remoteclient = Boolean.parseBoolean(properties.getProperty("remoteclient"));
             } catch (Exception e) {
                 LOG.error("Could not load CM Synergy session properties from file \"" + attributeFile + "\".", e);
             }
@@ -259,7 +280,7 @@ public class CMSynergySessionMonitor implements Listener {
 
         /**
          * Validates the fields of this object.
-         * 
+         *
          * @throws CruiseControlException if something breaks
          */
         public void validate() throws CruiseControlException {
@@ -274,7 +295,7 @@ public class CMSynergySessionMonitor implements Listener {
     /**
      * Checks the given session file. If it is does not exist, it is created. This method is synchronized to prevent
      * multiple threads from attempting to create the same file.
-     * 
+     *
      * @param sessionFile
      *            The session file to check
      * @throws CruiseControlException if something breaks
@@ -303,7 +324,7 @@ public class CMSynergySessionMonitor implements Listener {
      * Checks that all named sessions given to the listener are still running (and accessible). If they are not, new
      * sessions are started as needed. This method is synchronized to prevent multiple threads from each starting their
      * own CM Synergy sessions.
-     * 
+     *
      * @param ccmExe
      *            The CM Synergy command line executable
      * @param sessionFile
@@ -390,6 +411,13 @@ public class CMSynergySessionMonitor implements Listener {
             cmd.createArguments("-h", session.getHost());
         }
 
+        if (session.isRemoteClient()) {
+            LOG.debug("Connecting in remote-client mode");
+            cmd.createArgument("-rc");
+        } else {
+            LOG.debug("Connecting in local mode");
+        }
+
         try {
             cmd.execute();
             cmd.assertExitCode(0);
@@ -403,7 +431,7 @@ public class CMSynergySessionMonitor implements Listener {
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see net.sourceforge.cruisecontrol.Listener#handleEvent(net.sourceforge.cruisecontrol.ProjectEvent)
      */
     public void handleEvent(ProjectEvent event) throws CruiseControlException {
@@ -419,7 +447,7 @@ public class CMSynergySessionMonitor implements Listener {
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see net.sourceforge.cruisecontrol.Listener#validate()
      */
     public void validate() throws CruiseControlException {
